# QSR-RCC8

./: .gitignore  CMakeLists.txt
experiments/: CMakeLists.txt
experiments/rcc8.reasoner.lib.satisfiability/: CMakeLists.txt  main.cpp
rcc8.reasoner.api/: CMakeLists.txt  test_lib.cpp  test_lib.h
rcc8.reasoner.cli/: CMakeLists.txt  main.cpp  test_ex.cpp
rcc8.reasoner.lib/: CMakeLists.txt
rcc8.reasoner.lib/QSR/: rcc8.h
rcc8.reasoner.lib/include/QSR/: rcc8.h
rcc8.reasoner.lib/internal/: reasoner_internal.h
rcc8.reasoner.lib/src/: constraint_network.cpp  modal_world.cpp  reasoner_dc.cpp  reasoner_ec.cpp  reasoner_eq.cpp  reasoner_utils.cpp  region.cpp  solution_context.cpp
tests/: CMakeLists.gbench.txt.in  CMakeLists.gtest.txt.in  CMakeLists.txt
tests/cmake/: CMakeLists.gqr.txt.in  SetupGBench.cmake  SetupGTest.cmake  SetupGqr.cmake
tests/rcc8.reasoner.api.tests/: CMakeLists.txt  main.cpp  test_test.cpp
tests/rcc8.reasoner.lib.benchmarks/: CMakeLists.txt  benchmark_administrator.h  main.cpp  utils.h  wrappers.h
tests/rcc8.reasoner.lib.tests/: CMakeLists.txt  eq_tests.cpp  rcc8_network_tests.cpp  relation_tests.cpp
